--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -65,3 +65,7 @@ required = [
   [[prune.project]]
     name = "k8s.io/code-generator"
     non-go = false
+
+[[constraint]]
+  branch = "master"
+  name = "github.com/buger/jsonparser"
